# Ngineer

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  server.js
geqslib/: CHANGELOG.md  Cargo.toml  geqslib.h
geqslib/src/: newton.rs
gmatlib/: CHANGELOG.md  Cargo.toml  gmatlib.h
gmatlib/src/: ffi.rs  lib.rs  trait_impls.rs
neapolitan/: .temp  CHANGELOG.md  Cargo.toml
neapolitan/neapolitan_json/: circuit.json
neapolitan/src/: dc_circuits.rs  errors.rs  flux_formulas.rs  heat_transfer.rs  lib.rs  main.rs  ss1d_circuits.rs  ssdc_circuits.rs
neapolitan/src/modelling/: element.rs  mod.rs  node.rs
neapolitan/src/structures_2d/: cross_sections.rs  mod.rs
neapolitan/tests/: ssdc_circuits_tests.rs
neapolitan_json/: circuit.soln.json  neapolitan_model_schema.json
nexsys/: Cargo.toml
nexsys/src/: ffi.rs  lib.rs  main.rs
nexsys/src/parsing/: mod.rs
ngineer_gui/: package-lock.json  package.json
ngineer_gui/src/: index.html  main.js  styles.css  styles.css.map
ngineer_gui/src-tauri/: Cargo.toml  tauri.conf.json
ngineer_gui/src-tauri/src/: main.rs
ngineer_gui/src/modules/: colors.mjs  debugRibbon.mjs  formatting.mjs  leftRibbon.mjs  projectRibbon.mjs
ngineer_gui/src/scss/: colors.scss  leftRibbonMenu.scss  projectRibbon.scss  structure.scss  styles.scss
ngineer_js/: Cargo.toml  index.html  server.js  tsconfig.json
ngineer_js/ngineer_js_bindings/: Cargo.toml
ngineer_js/ngineer_js_bindings/src/: lib.rs
ngineer_js/scss/: constants.scss  structure.scss  style.scss
ngineer_js/scss/structure/: leftRibbonMenu.scss  topRibbonMenu.scss
ngineer_js/src/: common.ts  debugRibbon.ts  index.ts  leftRibbonMenu.ts  mainPanel.ts  panelManager.ts  tagbuilder.ts
ngineer_py/: Cargo.toml
ngineer_py/src/: geqslib_py.rs  gmatlib_py.rs  lib.rs
