[package]
name = "neapolitan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
geqslib = { path = "../geqslib" }
gmatlib = { path = "../gmatlib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.60"

[[test]]
name = "ssdc_circuits_tests"
path = "tests/ssdc_circuits_tests.rs"