[package]
name = "neapolitan"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
geqslib = { version = "0.1.4", path = "../geqslib" }
gmatlib = { version = "0.2.0", path = "../gmatlib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.60"

[dev-dependencies]
rand = "0.8.5"

[[bin]]
name = "neapolitan"
path = "src/main.rs"

[[test]]
name = "ssdc_circuits_tests"
path = "tests/ssdc_circuits_tests.rs"
